Fix wrong background color

--- a/server/public/src/components/login/login-form/login-form.scss
+++ b/server/public/src/components/login/login-form/login-form.scss
@@ -1,6 +1,5 @@
 login-form {
   height: inherit;
-  background-color: green;
   md-toolbar {
     height: inherit;
     md-input-container{
